fix modal styling on mobile

--- a/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -9,25 +9,20 @@
     flex-direction: row;
     justify-content: flex-start;
     border-bottom: 0.5px solid $color-border;
-    padding: 15px 7%;
+    padding: 1.5rem 7%;
     margin: 0;
     @include tablet {
       align-items: center;
       justify-content: space-between;
-      padding: 15px 4%;
+      padding: 2rem 4%;
       margin: 0;
     }
     &-arrow {
-      padding-right: 2%;
+      margin-right: 1rem;
     }
     &-title {
       font-weight: 600;
       color: $color-text;
-      margin: 12px 0;
-
-      @include tablet {
-        margin: 10px 0 0 0;
-      }
     }
     &-button {
       align-self: center;
